# rdl-shell

./: CHANGELOG.md  Cargo.toml  README.md  build.rs
.github/workflows/: build.yml  test.yml
resources/: app.manifest  app.rc  rdl-shell.def
src/: client.rs  config.rs  error.rs  factory.rs  handler.rs  lib.rs  registry.rs
tests/: smoke.rs
