[package]
name = "rdl-shell"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Windows Explorer shell extension that adds 'Send to remote-dl' to the Internet Shortcut context menu"
authors = ["GHSFS"]
license = "MIT"
repository = "https://github.com/GHSFS/rdl-shell"
readme = "README.md"
keywords = ["shell-extension", "explorer", "context-menu", "windows", "com"]
categories = ["os::windows-apis"]

[lib]
name = "rdl_shell"
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
directories = "5"
base64 = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }
thiserror = "1"
url = "2.5"

[target.'cfg(windows)'.dependencies]
windows-core = "0.58"

[target.'cfg(windows)'.dependencies.windows]
version = "0.58"
features = [
    "implement",
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Memory",
    "Win32_System_Ole",
    "Win32_System_Registry",
    "Win32_System_LibraryLoader",
    "Win32_Security_Cryptography",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_Storage_FileSystem",
]

[build-dependencies]
embed-resource = "2.5"

[dev-dependencies]
tempfile = "3.10"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
